syntax = "proto3";

option go_package = "mizar.futurewei.com/crds-operators/vpcs/proxy/vpcs";
option java_multiple_files = true;
option java_package = "io.crds-operators.vpcs.proxy";
option java_outer_classname = "VpcsProto";

package vpcs;


// service
service VpcsService { 
    rpc CreateVpc(Vpc) returns (Empty) {}
    rpc UpdateVpc(Vpc) returns (Empty) {}
    rpc ReadVpc(VpcIp) returns (VpcsResponse) {}
    rpc DeleteVpc(VpcIp) returns (Empty) {}
    rpc ResumeVpc(VpcIp) returns (Empty) {}
}

// requests
message Vpc {
  string Ip = 1;
  string Prefix = 2;
  string Vni = 3;
  int32 Dividers = 4;
  string Status = 5;
  string CreateTime = 6;
  string ProvisionDelay = 7;
}

message VpcIp {
  string Ip = 1;
}

//response
message Empty {}

message VpcsResponse {
    string json_returncode = 1;
}


